--- a/src/webparts/mtnconfirmation/components/screens/HomeScreen/home.module.scss
+++ b/src/webparts/mtnconfirmation/components/screens/HomeScreen/home.module.scss
@@ -11,7 +11,7 @@
 .mtn__banner{
     width: 100%;
     display: flex;
-    padding: 2rem;
+    padding: 3rem 2rem;
     background: rgba(255, 196, 35, 1);
     align-self: flex-end;
     justify-content: space-around;
@@ -23,4 +23,11 @@
 }
 
 .logo{display: flex;margin-right: 1rem;}
-.text{display: flex;flex-direction: column;}
+.logo img{width:100px;height:100px;object-fit: contain;}
+.text{display: flex;flex-direction: column}
+.text h3{font-size: 2rem;}
+.text h1{font-size: 3rem;}
+.btnContainer{
+    display: flex;
+    align-self: center;justify-content: center;align-items: center;
+}
