--- a/src/webparts/mtnconfirmation/components/styles.scss
+++ b/src/webparts/mtnconfirmation/components/styles.scss
@@ -1,89 +1,140 @@
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap');
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: 'Gothic A1', sans-serif;
+
+@font-face {
+  font-family: "MTNBrighterSans-Medium";
+  src: url("https://mtnonline.com/smartanalytics/assets/assets/fonts/MTNBrighterSans-Medium.eot");
+  src: url("https://mtnonline.com/smartanalytics/assets/assets/fonts/MTNBrighterSans-Medium.woff") format("woff");
   }
 
-  .mtn__contents{
-      width: 100%;
-      display: flex;
-      padding: 3rem 10rem;
-      background: rgba(196, 196, 196, 0.22);
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  // font-family: 'Gothic A1', sans-serif;
+  font-family: MTNBrighterSans-Medium;
+}
+
+.mtn__contents {
+  width: 100%;
+  display: flex;
+  padding: 3rem 10rem;
+  background: rgba(196, 196, 196, 0.22);
+}
+
+.mtn__formContainer {
+  display: flex;
+  flex: 1;
+  background: white;
+  padding: 5rem 10rem;
+  border-radius: 10px;
+  box-shadow: 0px 4px 25px 4px rgba(0, 0, 0, 0.05);
+  flex-direction: column;
+}
+
+.mtn__btn {
+  width: 100%;
+  height: 3.5rem;
+  outline: none;
+  padding: 1rem 3rem;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  align-items: center;
+}
+
+.mtn__btnContaainer {
+  display: flex;
+  justify-content: flex-end;
+  padding: .5rem 2rem;
+  gap: 2rem;
+}
+
+.mtn__black {
+  background: #000;
+}
+
+.mtn__blackOutline {
+  border: 1px solid#000;
+  background: white;
+  color: #000;
+}
+
+.mtn__InputFlex {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  flex: 1;
+}
+
+.mtn__child {
+  flex-basis: 50%;
+}
+
+.mtn__InputContainer {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2rem;
+  padding: .5rem 2rem;
+
+  label {
+    font-size: 13px;
+    margin-left: .3rem;
+    margin-bottom: .5rem;
   }
 
-  .mtn__formContainer{
-      display: flex;
-      flex: 1;
-      background: white;
-      padding: 5rem 10rem;
-      border-radius: 10px;
-      box-shadow: 0px 4px 25px 4px rgba(0, 0, 0, 0.05);
-      flex-direction: column;
-  }
-
-  .mtn__btn{
+  input {
     width: 100%;
     height: 3.5rem;
     outline: none;
-    padding: 1rem 3rem;
+    border: none;
+    padding: .5rem 1.5rem;
     border-radius: 10px;
+    background: rgba(196, 196, 196, 0.22);
+  }
+
+  input:read-only {
+    background: whitesmoke
+  }
+
+  select {
+    width: 100%;
+    height: 3.5rem;
+    outline: none;
+    border: none;
+    padding: .5rem 1.5rem;
+    border-radius: 10px;
+    background: rgba(196, 196, 196, 0.22);
+  }
+  span{
     display: flex;
     justify-content: center;
-    text-align: center;
-    color: white;
-    text-decoration: none;
-    border: none;
-    outline: none;align-items: center;
+    align-items: center;
+  }
+  input[type="radio"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    padding: 2px;
+    background-clip: content-box;
+    border: 1px solid gainsboro;
+    border-radius: 50%;
+    margin:0 1rem;
+
+
+  }
+  input[type="radio"]:checked {
+    background-color: #FFCC00;
+  }
+  .most__RadioContainer{
+    display: flex;
+    // justify-content: space-between;
+  }
 }
-
-.mtn__btnContaainer{display: flex;justify-content: flex-end;padding: .5rem 2rem;gap: 2rem;}
-.mtn__black{background: #000;}
-.mtn__blackOutline{border:1px solid#000;background: white;color: #000;}
-
-  .mtn__InputFlex{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    flex: 1;
-  }
-
-  .mtn__child{
-      flex-basis: 50%;
-  }
-
-.mtn__InputContainer {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 2rem;
-    padding: .5rem 2rem;
-    label {
-        font-size: 13px;
-        margin-left: .3rem;
-        margin-bottom: .5rem;
-      }
-      input {
-        width: 100%;
-        height: 3.5rem;
-        outline: none;
-        border: none;
-        padding: .5rem 1.5rem;
-        border-radius: 10px;
-        background: rgba(196, 196, 196, 0.22);
-      }
-      input:read-only {
-        background: whitesmoke
-      }
-      select {
-        width: 100%;
-        height: 3.5rem;
-        outline: none;
-        border: none;
-        padding: .5rem 1.5rem;
-        border-radius: 10px;
-        background: rgba(196, 196, 196, 0.22);
-      }
-  }
-  
