--- a/src/webparts/mtnconfirmation/components/screens/ConfirmationForm/Behavioural Traits Evaluation/Section 3/section3.module.scss
+++ b/src/webparts/mtnconfirmation/components/screens/ConfirmationForm/Behavioural Traits Evaluation/Section 3/section3.module.scss
@@ -20,12 +20,24 @@
 }
 
 .input__container {
-  margin-top: 28px;
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  grid-gap: 70px;
+  margin-left: 30px;
 }
 
 .section1__input {
   width: 100%;
   display: flex;
+  align-items: center;
+  grid-gap: 10px;
+}
+
+.radio_input {
+  display: flex;
+  align-items: center;
+  grid-gap: 10px;
 }
 
 .section1__comments {
