--- a/src/webparts/mtnconfirmation/components/styles.scss
+++ b/src/webparts/mtnconfirmation/components/styles.scss
@@ -1,19 +1,42 @@
-@import url('https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap');
 
 @font-face {
   font-family: "MTNBrighterSans-Medium";
-  src: url("https://mtnonline.com/smartanalytics/assets/assets/fonts/MTNBrighterSans-Medium.eot");
-  src: url("https://mtnonline.com/smartanalytics/assets/assets/fonts/MTNBrighterSans-Medium.woff") format("woff");
+  src: url("./assets/MTNBrighterSans-Medium.eot");
+  src: url("./assets/MTNBrighterSans-Medium.woff") format("woff");
   }
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  // font-family: 'Gothic A1', sans-serif;
   font-family: MTNBrighterSans-Medium;
 }
+//   Admin Page Setup
+.appContainer{
+  display: flex;
+  flex: 1;
+  height: 100vh;
+  background: white;
+  justify-content: space-around;
+}
 
+.contentsRight {
+  flex-grow: 1;
+  padding: 0;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  flex: 0.87;
+  padding: .5rem 2rem;
+  background: white;
+
+}
+.cardContainer{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+// End of Admin
 .mtn__contents {
   width: 100%;
   display: flex;
@@ -47,6 +70,38 @@
   align-items: center;
 }
 
+
+.mtn__btns {
+  height: 3.5rem;
+  outline: none;
+  padding: 1rem 3rem;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  align-items: center;
+}
+
+.mtn__btn_table {
+  outline: none;
+  padding: .5rem 2rem;
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  align-items: center;
+  font-size: 12px;
+  margin-right: 1rem;
+}
+
 .mtn__btnContaainer {
   display: flex;
   justify-content: flex-end;
@@ -68,24 +123,27 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
-  flex: 1;
+  justify-content: space-between;
+  // flex: 1;
 }
 
 .mtn__child {
   flex-basis: 50%;
 }
-
+.mtn__adult {
+  flex-basis: 100%;
+}
 .mtn__InputContainer {
   display: flex;
   flex-direction: column;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   padding: .5rem 2rem;
 
   label {
     font-size: 13px;
     margin-left: .3rem;
     margin-bottom: .5rem;
+    display: flex;
   }
 
   input {
@@ -101,7 +159,10 @@
   input:read-only {
     background: whitesmoke
   }
-
+  input:focus {
+    border: 1px solid #FFCC00;
+    outline: 1px solid #FFCC00;
+  }
   select {
     width: 100%;
     height: 3.5rem;
@@ -110,6 +171,15 @@
     padding: .5rem 1.5rem;
     border-radius: 10px;
     background: rgba(196, 196, 196, 0.22);
+    appearance: none;
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6 9 12 15 18 9'%3e%3c/polyline%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right 1rem center;
+    background-size: 1em;
+  }
+  select:focus {
+    border: 1px solid #FFCC00;
+    outline: 1px solid #FFCC00;
   }
   span{
     display: flex;
@@ -137,4 +207,29 @@
     display: flex;
     // justify-content: space-between;
   }
+}
+.required{
+  color: crimson;
+  margin-left: .5rem;
+}
+
+.mtn__btnContainer {
+  display: flex;
+  justify-content: flex-start;
+ 
+}
+.right{
+  display: flex;
+  justify-content: flex-end;
+}
+.mtn__black {
+  background: #000;
+}
+.mtn__yellow{
+    background: rgba(255, 196, 35, 1);
+    color: #000;
+}
+.mtn__blue{
+  background: #006993;
+  color: #fff;
 }
