--- a/src/webparts/mtnconfirmation/components/Containers/TextArea/textarea.module.scss
+++ b/src/webparts/mtnconfirmation/components/Containers/TextArea/textarea.module.scss
@@ -12,3 +12,12 @@ textarea {
   border: none;
   outline: none;
 }
+
+.md {
+  width: 100%;
+  height: 10vh;
+}
+.sm {
+  width: 100%;
+  height: 5vh;
+}
