--- a/src/webparts/mtnconfirmation/components/screens/ConfirmationForm/Supervisory/Supervisory Section 1/section1.module.scss
+++ b/src/webparts/mtnconfirmation/components/screens/ConfirmationForm/Supervisory/Supervisory Section 1/section1.module.scss
@@ -39,3 +39,12 @@
   justify-content: flex-end;
   grid-gap: 20px;
 }
+.score__input {
+  background: white;
+  border: none;
+  outline: none;
+  padding: 16px;
+  border-radius: 4px;
+  align-self: center;
+  margin-right: 40px;
+}
