--- a/src/webparts/mtnconfirmation/components/screens/ConfirmationForm/PendingRequests/pendingRequests.module.scss
+++ b/src/webparts/mtnconfirmation/components/screens/ConfirmationForm/PendingRequests/pendingRequests.module.scss
@@ -35,23 +35,19 @@ td {
   padding: 0.5rem;
 }
 
-.view__Btn {
-  width: 70%;
-  height: 2.5rem;
+.mtn__blackBtn {
   outline: none;
-  padding: 1rem 2rem;
+  padding: 1rem 3rem;
   border-radius: 10px;
   display: flex;
-  justify-content: center;
-  text-align: center;
   color: aliceblue;
+  background-color: black;
   text-decoration: none;
   border: none;
-  outline: none;
-  align-items: center;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-top: 10px;
+  margin-bottom: 10px;
   font-weight: bold;
+  font-size: 15px;
   box-shadow: 0px 2px 2px 0px rgb(134, 109, 109);
   cursor: pointer;
 }
