--- a/src/webparts/mtnconfirmation/components/screens/ConfirmationForm/performanceFactor/performance.module.scss
+++ b/src/webparts/mtnconfirmation/components/screens/ConfirmationForm/performanceFactor/performance.module.scss
@@ -68,7 +68,12 @@
   border-radius: 8px;
 }
 
-
+.msg{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+}
 
 // .perfomanceLayout {
 //   display: grid;
