--- a/src/webparts/mtnconfirmation/components/styles.scss
+++ b/src/webparts/mtnconfirmation/components/styles.scss
@@ -126,7 +126,17 @@
   justify-content: space-between;
   // flex: 1;
 }
+.medium {
+  flex-basis: 50%;
+}
 
+.textContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  // flex: 1;
+}
 .mtn__child {
   flex-basis: 50%;
 }
